web_public and alias on categories activities and extras

--- a/views/_booking_management_edit.erb
+++ b/views/_booking_management_edit.erb
@@ -4,7 +4,7 @@
     <input type="hidden" name="booking_id" value="<%%=entity.id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Producto</label>
-      <input type="text" name="item_id" class="fieldcontrol" maxlength="20"/>
+      <select name="item_id" id="new_booking_line_item_id" class="fieldcontrol"></select>
     </div>
     <div class="formrow">
       <label class="fieldtitle">Cantidad</label>
@@ -23,7 +23,7 @@
     <input type="hidden" name="booking_id" value="<%%=entity.id%>"/>
     <div class="formrow">
       <label class="fieldtitle">Extra</label>
-      <input type="text" name="extra_id" class="fieldcontrol" maxlength="20"/>
+      <select name="extra_id" id="new_booking_extra_extra_id" class="fieldcontrol"></select>
     </div>
     <div class="formrow">
       <label class="fieldtitle">Cantidad</label>
