--- a/views/booking_activities_management.erb
+++ b/views/booking_activities_management.erb
@@ -120,7 +120,11 @@
               <div class="formrow">
                 <label class="fieldtitle"><%= t.booking_category_management.form.active.label%></label>
                 <input type="checkbox" name="active" value="true" id="active" <%% if (entity && entity.active) { %>checked="checked"<%%}%>/>
-              </div>                    
+              </div> 
+              <div class="formrow">
+                <label class="fieldtitle"><%= t.booking_category_management.form.web_public.label%></label>
+                <input type="checkbox" name="web_public" value="true" id="web_public" <%% if (entity && entity.web_public) { %>checked="checked"<%%}%>/>
+              </div>                                  
               <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
                 <div class="navigation-bar-crud-buttons">
                   <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
@@ -156,7 +160,12 @@
               <div class="formrow">
                 <label class="fieldtitle">Precio desde (oferta)</label>
                 <input type="text" maxlength="12" id="from_price_offer" name="from_price_offer" class="fieldcontrol" <%% if (entity) { %> value="<%%=new Number(entity.from_price_offer).toFixed(2)%>" <%% } %>/>
-              </div>              
+              </div>
+              <div class="formrow">
+                <label class="fieldtitle"><%= t.booking_activity_management.form.alias.label%></label>
+                <input type="text" class="fieldcontrol" name="alias" id="alias" <%% if (entity){%>value="<%%=entity.alias%>" <%%} else { %>value="0"<%%}%>/>
+                <p class="smaller_text less_contrast_text">Esta opción permite establecer una url alternativa para visualizar el producto en el navegador</p>                
+              </div>                             
               <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
                 <div class="navigation-bar-crud-buttons">
                   <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
