--- a/views/booking_extras_management.js.erb
+++ b/views/booking_extras_management.js.erb
@@ -75,6 +75,15 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
         }
       }
 
+      if ($('#web_public').length > 0) {
+        if ($('#web_public').prop('checked')) {
+          data.web_public = true;
+        }
+        else {
+          data.web_public = false;
+        }
+      } 
+
       return data;  
       
     }     
