--- a/views/render-activity-teaser.erb
+++ b/views/render-activity-teaser.erb
@@ -22,7 +22,7 @@
           	    </div>
           	    <div class="grid_3">
           	      <div class="left-margin">
-          	      	<div class="form-button green-button" style="position:relative; top:0.5em"><a href="/p/activity/<%=activity.id%>">Reservar</a></div>
+          	      	<div class="form-button green-button" style="position:relative; top:0.5em"><a href="<%=activity.alias%>">Reservar</a></div>
           	      </div>
                 </div>
               </div>
