--- a/views/_booking_management_resources.erb
+++ b/views/_booking_management_resources.erb
@@ -36,7 +36,7 @@
                                <td class="table-cell centered_text">
                                   <form data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
                                     <input type="hidden" name="id" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].id%>"/>
-                                    <select name="customer_height" class="fieldcontrol customer_height">
+                                    <select name="customer_height" class="fieldcontrol customer_height" data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
                                       <option value=""><%=t.booking_management.form.customer_height_placeholder%></option>
                                       <% booking_item_family.height_values.split(',').each do |height|%>
                                         <option value="<%=height%>" <%% if (entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].customer_height == '<%=height%>') { %>selected="selected"<%%}%>><%=height%></option>
@@ -47,9 +47,9 @@
                                <% end %>
                                <% if booking_item_family.weight %>
                                <td class="table-cell centered_text">
-                                  <form data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
+                                  <form data-name="height" data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
                                     <input type="hidden" name="id" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].id%>"/>
-                                    <select name="customer_weight" class="fieldcontrol customer_weight">
+                                    <select name="customer_weight" class="fieldcontrol customer_weight" data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
                                     <option value=""><%=t.booking_management.form.customer_weight_placeholder%></option>
                                        <% booking_item_family.weight_values.split(',').each do |weight|%>
                                         <option value="<%=weight%>" <%% if (entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].customer_weight == '<%=weight%>') { %>selected="selected"<%%}%>><%=weight%></option>
