--- a/views/reservation_activities_shopping_cart.erb
+++ b/views/reservation_activities_shopping_cart.erb
@@ -1,6 +1,6 @@
 <style>
   body {
-    background-color: #DDD;
+    background-color: white;
   }
   .activity_list_item {
     background-color: white;
