--- a/views/reservation_activity.erb
+++ b/views/reservation_activity.erb
@@ -4,7 +4,7 @@
   }
 </style>
 <div class="container_12">
-  <h1 style="font-size:2.5em; text-align:left"><%=@activity.name%></h1>
+  <h2><%=@activity.name%></h2>
   <div class="grid_10">
     <div class="top-margin-1line bottom-margin-1line less_contrast_text">
       <%=@activity.short_description%>
