--- a/views/_booking_management_additional_drivers.erb
+++ b/views/_booking_management_additional_drivers.erb
@@ -27,7 +27,16 @@
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
                      <span class="entity-fieldvalue">
-                       <input type="text" maxlength="15" size="25" name="additional_driver_1_driving_license_number" id="additional_driver_1_driving_license_number"
+                       <input type="text" maxlength="50" size="25" name="additional_driver_1_document_id" id="additional_driver_1_document_id"
+                      value="<%%=entity.additional_driver_1_document_id%>"/>
+                    </span>
+                  </div>
+              </div>               
+              <div class="element_template">
+                  <div class="entity-field">
+                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
+                     <span class="entity-fieldvalue">
+                       <input type="text" maxlength="50" size="25" name="additional_driver_1_driving_license_number" id="additional_driver_1_driving_license_number"
                       value="<%%=entity.additional_driver_1_driving_license_number%>"/>                       
                     </span>
                   </div>
@@ -69,7 +78,16 @@
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
                      <span class="entity-fieldvalue">
-                       <input type="text" maxlength="15" size="25" name="additional_driver_2_driving_license_number" id="additional_driver_2_driving_license_number"
+                       <input type="text" maxlength="50" size="25" name="additional_driver_2_document_id" id="additional_driver_2_document_id"
+                      value="<%%=entity.additional_driver_2_document_id%>"/>
+                    </span>
+                  </div>
+              </div>                  
+              <div class="element_template">
+                  <div class="entity-field">
+                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
+                     <span class="entity-fieldvalue">
+                       <input type="text" maxlength="50" size="25" name="additional_driver_2_driving_license_number" id="additional_driver_2_driving_license_number"
                       value="<%%=entity.additional_driver_2_driving_license_number%>"/>                       
                     </span>
                   </div>
