document id literals

--- a/views/_booking_management_additional_drivers.erb
+++ b/views/_booking_management_additional_drivers.erb
@@ -25,7 +25,7 @@
               <% if booking_item_family.driver_license %> 
               <div class="element_template">
                   <div class="entity-field">
-                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
+                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id %></span>
                      <span class="entity-fieldvalue">
                        <input type="text" maxlength="50" size="25" name="additional_driver_1_document_id" id="additional_driver_1_document_id"
                       value="<%%=entity.additional_driver_1_document_id%>"/>
@@ -76,7 +76,7 @@
               <% if booking_item_family.driver_license %> 
               <div class="element_template">
                   <div class="entity-field">
-                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
+                     <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id %></span>
                      <span class="entity-fieldvalue">
                        <input type="text" maxlength="50" size="25" name="additional_driver_2_document_id" id="additional_driver_2_document_id"
                       value="<%%=entity.additional_driver_2_document_id%>"/>
