--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -33,10 +33,11 @@
       </ul>    
    </li>    
    <% if booking_renting %>
-   <li class='<%if ['/admin/booking/new','/admin/booking/customers', '/admin/booking/bookings','/admin/booking/planning','/admin/booking/monthly-occupation', '/admin/booking/period-occupation', '/admin/booking/reports/pickup-return','/admin/booking/reports/reservations','/admin/booking/reports/customers'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.bookings%></a>
+   <li class='<%if ['/admin/booking/new','/admin/booking/customers', '/admin/booking/bookings','/admin/booking/planning','/admin/booking/monthly-occupation', '/admin/booking/period-occupation', '/admin/booking/reports/pickup-return','/admin/booking/reports/reservations','/admin/booking/reports/pending-confirmation','/admin/booking/reports/customers'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.bookings%></a>
       <ul>
         <li><a href='/admin/booking/customers'><%=t.booking_console.new_booking%></a></li>           
         <li><a href='/admin/booking/bookings'><%=t.booking_console.reservations%></a></li>
+        <li><a href='/admin/booking/reports/pending-confirmation'><%=t.booking_console.report_pending_confirmation%></a></li>
         <li><a href='/admin/booking/planning'><%=t.booking_console.planning%></a></li>    
         <li><a href='/admin/booking/reports/pickup-return'><%=t.booking_console.report_pickup_return%></a></li>
         <li><a href="/admin/booking/period-occupation"><%=t.booking_console.check_availability%></a></li> 
