--- a/views/config_booking.erb
+++ b/views/config_booking.erb
@@ -70,6 +70,9 @@
               <li class="no-border no-background top-space" style="border:none;background:none">
                 <a name="rent_online_payment_tab" href="#rent_online_payment_tab"><%=t.booking_settings.form.payment_group%></a>
               </li>              
+              <li class="no-border no-background top-space" style="border:none;background:none">
+                <a name="renting_adwords_tab" href="#renting_adwords_tab"><%=t.booking_settings.form.adwords_group%></a>
+              </li>              
             </ul>
             <div id="rent_content" class="content top-margin">
               <div id="rent_general_tab">                  
@@ -121,6 +124,23 @@
                     </form>                                  
                   </div>
                 </div>
+              </div>
+              <div id="renting_adwords_tab">
+                <div class="container_12">
+                  <div class="grid_6">
+                    <form name="variables" action="/api/variables" method="PUT" 
+                          data-remote="ajax" data-remote-method="PUT">
+                      <%= render_variable_checkbox_boolean('booking.adwords_active', t.booking_settings.form.adwords_active) %>
+                      <%= render_variable_input_text('booking.adwords_booking_request_conversion_id', t.booking_settings.form.booking_request_conversion_id, 255, 30) %>
+                      <%= render_variable_input_text('booking.adwords_booking_request_conversion_label', t.booking_settings.form.booking_request_conversion_label, 255, 30) %>
+                      <%= render_variable_input_text('booking.adwords_booking_pay_now_conversion_id', t.booking_settings.form.booking_pay_now_conversion_id, 255, 30) %>
+                      <%= render_variable_input_text('booking.adwords_booking_pay_now_conversion_label', t.booking_settings.form.booking_pay_now_conversion_label, 255, 30) %>                      
+                      <div class="formrow-botonera top-separator top-space">
+                        <input type="submit" value="<%=t.entitymanagement.update%>" class="button blue-button">
+                      </div>
+                    </form>
+                  </div>
+                </div>                                                               
               </div>
             </div>
           </div>
