--- a/views/reserva-online.js.erb
+++ b/views/reserva-online.js.erb
@@ -10,7 +10,7 @@
            'json2', 'jquery.validate', 
            'jquery.placeholder', 'jquery.ui', 'jquery.ui.datepicker-es', 
            'jquery.ui.datepicker.validation',
-           'jquery.tools', 'jquery.formparams', 'datejs'], 
+           'jquery.tools', 'jquery.formparams', 'datejs', 'http://www.googleadservices.com/pagead/conversion_async.js'], 
            function($, YSDForms, DateControl, tmpl, bookingDataSystem,  
            ListSelector, MemoryDataSource, RemoteDataSource, SelectSelector, YSDGui) {  
 
@@ -777,7 +777,23 @@
 
        apply_promotion_code: function(promotion_code, value, discount_type) {
          this.booking.apply_promotion_code(promotion_code, value, discount_type);
-       } 
+       }, 
+
+       google_adwords_conversion: function(conversion_id, conversion_label,
+                                           conversion_value, conversion_currency) {
+         var w = window;
+         w.google_conversion_id = conversion_id;
+         w.google_conversion_label = conversion_label;
+         w.google_conversion_value = conversion_value;
+         w.google_conversion_currency = conversion_currency || "EUR";
+         w.google_remarketing_only = false;
+         window.google_conversion_format = "3";
+         var opt = new Object();
+         var conv_handler = window['google_trackConversion'];
+         if (typeof(conv_handler) == 'function') {
+           conv_handler(opt);
+         }
+       }
        
     };
     
@@ -872,17 +888,32 @@
 
         if (typeof _gaq != 'undefined') {
           _gaq.push(['_trackEvent', 'Reservations', 'Go to payment',
-             $('#booking\\[customer_email\\]').val() + ' ' + 
-             $('#booking\\[customer_name\\]').val() + ' ' +
-             $('#booking\\[customer_surname\\]').val()]);
+                     bookingModel.booking.total_cost]);
         }
+
+        <% if booking_adwords_active %>       
+        bookingModel.google_adwords_conversion(
+             <%=booking_adwords_booking_pay_now_conversion_id%>,
+             '<%=booking_adwords_booking_pay_now_conversion_label%>',
+             bookingModel.booking.total_cost, 'EUR');
+        <% end %>
+        
         bookingModel.confirm_booking(data, true);
       },
 
       confirm_booking : function (data) { /* Confirm button click */
         if (typeof _gaq != 'undefined') {
-          _gaq.push(['_trackEvent', 'Reservations', 'Confirm Booking']);
-        }        
+          _gaq.push(['_trackEvent', 'Reservations', 'Confirm Booking',
+                     bookingModel.booking.total_cost]);
+        }
+
+        <% if booking_adwords_active %>
+        bookingModel.google_adwords_conversion(
+             <%=booking_adwords_booking_request_conversion_id%>,
+             '<%=booking_adwords_booking_request_conversion_label%>',
+             bookingModel.booking.total_cost, 'EUR');
+        <% end %>
+
         bookingModel.confirm_booking(data, false);
       },
       
