pickup / return place + configuration + adwords integration

--- a/views/_reserva_online_summary_header.erb
+++ b/views/_reserva_online_summary_header.erb
@@ -21,7 +21,7 @@
 	                  <div class="grid_3">
 	                  	<div class="right-margin smaller_text left-margin">
 	                      <div class="top-margin">
- 	                  	    <h3 class="guiblock"><%= t.booking_items[booking_item_type.to_sym].html_safe.capitalize %></h3>
+ 	                  	    <h3 class="guiblock"><%= t.booking_items[booking_item_type.to_sym] %></h3>
 	                        <img id="item_image" style="width: 170px;padding: 0"/>	
                             <p id="item_description" class="bigger_text more_contrast_text centered_text"></p>
                           </div>
