--- a/views/booking_pickup_return_places_management.erb
+++ b/views/booking_pickup_return_places_management.erb
@@ -40,11 +40,11 @@
 <!-- Renders one element in the elements list view -->
         
 <script type="text/tmpl" id="elements_list_template">
-    <tr class="table-row" id="element_row_<%%=index%>">
-      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+    <tr class="table-row element-navigation-detail" id="element_row_<%%=index%>" rel="<%%= index %>">
+      <td class="table-cell">
         <%%= entity.id %>
       </td>
-      <td class="table-cell element-navigation-detail" rel="<%%= index %>">
+      <td class="table-cell">
         <%%= entity.name %>
       </td>
       <td class="table-cell">
